--- a/alexandria/src/main/res/values/strings.xml
+++ b/alexandria/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="barcode_failure">No barcode captured</string>
     <string name="barcode_error">"Error reading barcode: %1$s"</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
-    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
+    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there, additional features
+    have been implemented as part as an update for the Nanodegree program.</string>
+
+    <string name="no_network_connection_available">You need an internet connection to perform this action. Please check your connectivity and try again.</string>
 </resources>
